# srsLTE

./: README-android.md  build_sd.sh  create_dist.sh
snapdragon/: CMakeLists.txt  build_android.sh  build_rootfs.sh  build_sd.sh
snapdragon/isaxpy/stub_dsp/: android_deps.min
snapdragon/kernels/: kernel.cl.hexagon.c
snapdragon/saxpy/: CMakeLists.txt  saxpy.c
snapdragon/saxpy/stub_dsp/: brisbanehxg.idl  brisbanehxg_imp.c  hexagon.min  hexagon_deps.min
snapdragon/stub_dsp/: android.min
tools.new/: build_automake.sh  build_cmake.sh  defines.h  execinfo.h  install_tools.sh
